--- a/catalog.html
+++ b/catalog.html
@@ -47,9 +47,13 @@
         <div class="carDisplay fadeIn" id="c100">
 
             <img class="carImage nysize" src="nytimes.png">
-            <p class="carDesc">Model: Jeep Cherokee <br>  Type: Economy <br>  Cost: $29.99/day <br> Rating: 8.5</p>
+            <p class="carDesc">
+                April 25, 2023, 3:09 p.m. ET <br>
+                It's Time to Finish the Job: Biden Begins His 2024 Campaign
+                In a speech after announcing his candidacy, President Biden called himself “the most pro-union president” in history and said Republicans favored the rich.
+                
 
-            <input type="button" class="carButton" id="c1" value="Select"></input>
+            <input type="button" class="carButton" id="c1" value="See More..."></input>
 
         </div>
 
@@ -58,7 +62,7 @@
             <img class="carImage" src="fox.png">
             <p class="carDesc">Model: Tesla Model X <br>  Type: Luxury <br> Cost: $49.99/day <br> Rating: 9.1 </p>
 
-            <input type="button" class="carButton" id="c2" value="Select"></input>
+            <input type="button" class="carButton" id="c2" value="See More..."></input>
 
         </div>
 
@@ -67,7 +71,7 @@
             <img class="carImage" src="cnn'.png">
             <p class="carDesc">Model: Toyota Camry <br>  Type: Economy <br> Cost: $29.99/day <br> Rating: 7.9 </p>
 
-            <input type="button" class="carButton" id="c3" value="Select"></input>
+            <input type="button" class="carButton" id="c3" value="See More..."></input>
 
         </div>
 
@@ -75,7 +79,7 @@
             <img class="carImage" src="nbc.png" id="lambo">
             <p class="carDesc">Model: Lamborghini Aventador <br>  Type: Super-Luxury <br> Cost: $69.99/day <br> Rating: 10!! </p>
 
-            <input type="button" class="carButton" id="c4" value="Select"></input>
+            <input type="button" class="carButton" id="c4" value="See More..."></input>
 
         </div>
 
@@ -83,7 +87,7 @@
 
             <img class="carImage nysize" src="ap.png">
             <p class="carDesc">Model: Honda Odyssey  <br>  Type: Economy <br> Cost: $29.99/day <br> Rating: 8.3 </p>
-            <input type="button" class="carButton" id="c5" value="Select"></input>
+            <input type="button" class="carButton" id="c5" value="See More..."></input>
 
         </div>
 
@@ -91,7 +95,7 @@
 
             <img class="carImage" src="npr.png">
             <p class="carDesc">Model: Porsche 911  <br>  Type: Luxury <br> Cost: $49.99/day <br> Rating: 9.5 </p>
-            <input type="button" class="carButton" id="c6" value="Select"></input>
+            <input type="button" class="carButton" id="c6" value="See More..."></input>
 
         </div>
 
@@ -99,7 +103,7 @@
 
             <img class="carImage" src="vox.png">
             <p class="carDesc">Model: Lexus NX  <br>  Type: Economy <br> Cost: $29.99/day <br> Rating: 8.7 </p>
-            <input type="button" class="carButton" id="c7" value="Select"></input>
+            <input type="button" class="carButton" id="c7" value="See More..."></input>
 
         </div>
 
@@ -107,14 +111,14 @@
 
             <img class="carImage" src="guard.png">
             <p class="carDesc">Model: Dodge Charger  <br>  Type: Luxury <br> Cost: $49.99/day <br> Rating: 9.3 </p>
-            <input type="button" class="carButton" id="c8" value="Select"></input>
+            <input type="button" class="carButton" id="c8" value="See More..."></input>
 
         </div>
         <div class="carDisplay fadeIn" id="c98">
 
             <img class="carImage" src="abc.png">
             <p class="carDesc">Model: Volvo XC90  <br>  Type: Economy <br> Cost: $29.99/day <br> Rating: 9.5 </p>
-            <input type="button" class="carButton" id="c9" value="Select"></input>
+            <input type="button" class="carButton" id="c9" value="See More..."></input>
 
         </div>
         <div class="carDisplay fadeIn" id="c109">
@@ -122,7 +126,7 @@
             <img class="carImage" src="pbs.png
             ">
             <p class="carDesc">Model: Ford Mustang  <br>  Type: Luxury <br> Cost: $49.99/day <br> Rating: 9.2 </p>
-            <input type="button" class="carButton" id="c10" value="Select"></input>
+            <input type="button" class="carButton" id="c10" value="See More..."></input>
 
         </div>
 
