Finished Conversion to News Site

--- a/ai.html
+++ b/ai.html
@@ -22,6 +22,12 @@
       Analyze text for bias!
     </p>
 
+    <div id="aitextanalysis">
+
+      <textarea placeholder="Enter some text to be analyzed (Non-Functional currently)"></textarea>
+
+    </div>
+
     
 
     <div class="footer">
@@ -40,6 +46,5 @@
     </div>
   </body>
 
-  <script src="fabric.js"></script>
   <script src="script.js"></script>
 </html>
