Added Info to Home

--- a/index.html
+++ b/index.html
@@ -28,12 +28,26 @@
       Access Unbiased, Reliable News of all areas.  
     </p>
 
+
+    </div>
+    <div class="titleInfo">
+      <p class="descTextStyling rights">Using AI to determine and remove possible bias</p>
+
+
+    </div>
+
+    <div class="titleInfo">
+      
+      <p class="descTextStyling mid">Bringing awareness to underrepresented topics and marginalized groups</p>
+
+    </div>
+
   
 
     <div class="footer">
       <button class="invis foot home">Home</button>
       <button class="invis foot cat">Catalog</button>
-      <button class="invis foot shop">Shop</button>
+      <button class="invis foot shop">AI Analysis</button>
       <br />
 
       <p id="footerText">
