--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
       <button class="invis nav login">Log-In</button>
     </div>
 
-    <p class="descTextStyling">
-      Access Unbiased, Reliable News of all areas.  
+    <p class="descTextStyling big">
+      Access Unbiased, Reliable News of all kinds.  
     </p>
 
+    <div class="titleInfo">
+
+      <p class="descTextStyling lefts">Partnering with various news sources to ensure a diverse outlook</p>
 
     </div>
     <div class="titleInfo">
       <p class="descTextStyling rights">Using AI to determine and remove possible bias</p>
-
-
     </div>
 
     <div class="titleInfo">
