--- a/catalog.html
+++ b/catalog.html
@@ -35,8 +35,8 @@
           <button class="dropOp" id="rhl">Oldest-Latest</button>
           <button class="dropOp" id="tel">Current Events</button>
           <button class="dropOp" id="tle">Other Topics</button>
-          <button class="dropOp" id="clh">Left-Right</button>
-          <button class="dropOp" id="chl">Right-Left</button>
+          <button class="dropOp" id="clh">Right-Left</button>
+          <button class="dropOp" id="chl">Left-Right</button>
         </div>
     </div>
 
